--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
  "dependencies": {
   "@heroui/button": "2.2.9",
   "@heroui/code": "2.2.6",
+  "@heroui/image": "^2.2.10",
   "@heroui/input": "2.4.9",
   "@heroui/kbd": "2.2.6",
   "@heroui/link": "2.2.7",
   "@heroui/listbox": "2.3.9",
   "@heroui/navbar": "2.2.8",
+  "@heroui/react": "^2.7.5",
   "@heroui/snippet": "2.2.10",
   "@heroui/switch": "2.2.8",
   "@heroui/system": "2.4.6",
@@ -25,10 +27,11 @@
   "clsx": "2.1.1",
   "framer-motion": "11.13.1",
   "intl-messageformat": "^10.5.0",
-  "next": "15.0.4",
+  "next": "^15.2.2",
   "next-themes": "^0.4.4",
   "react": "18.3.1",
-  "react-dom": "18.3.1"
+  "react-dom": "18.3.1",
+  "react-icons": "^5.5.0"
  },
  "devDependencies": {
   "@next/eslint-plugin-next": "15.0.4",
