--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "next-themes": "^0.4.4",
   "react": "18.3.1",
   "react-dom": "18.3.1",
+  "react-draggable": "^4.4.6",
   "react-icons": "^5.5.0"
  },
  "devDependencies": {
