--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "clsx": "2.1.1",
   "framer-motion": "11.13.1",
   "intl-messageformat": "^10.5.0",
+  "lucide-react": "^0.484.0",
   "next": "^15.2.3",
   "next-themes": "^0.4.4",
   "react": "18.3.1",
